--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ nbproject/
 fuel/app/config/config.php
 fuel/app/config/db.php
 fuel/app/tmp/Smarty/templates_c/*
+public/assets/js/admin.js
+public/assets/css/admin.css
