--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ fuel/app/config/db.php
 fuel/app/tmp/Smarty/templates_c/*
 public/assets/js/admin.js
 public/assets/css/admin.css
+public/files/images/*
+public/files/audio/*
