--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,10 @@ fuel/app/logs/*/*/*
 fuel/app/cache/*/*
 nbproject/
 .idea
-fuel/app/config/config.php
-fuel/app/config/db.php
 fuel/app/tmp/Smarty/templates_c/*
 public/assets/js/admin.js
 public/assets/css/admin.css
 public/files/images/*
 public/files/audio/*
+config
+fuel/app/config
